2001-11-28	Multiplexer fixes <mschimek@users.sf.net>

	* systems/mpeg1.c, mpeg2.c, vcd.c: Fixed I picture PTS reorder
	  offset bug, created incorrect I PTS when encoding B frames
	  (not in 1.9.1).
	* -e0: Fixed incorrect P picture offset.
	* -e1: Fake B picture PTS not coded anymore, fixed incorrect
	  I/P PTS offset in video/mpeg1.c.
	* -e2: worked. :-)

2001-11-27	<mschimek@users.sf.net>

	* v4l.c: Try VIDEO_PALETTE_YUYV before _YUV422. (Some drivers
	  do not support _YUYV, and YUV422 may be YUYV (bttv), UYVY
	  (dc10) or according to v4l api spec YYYYUUVV.)
	* psycho.c: Fixed array initialization, segfault was possible.

2001-11-20	<mschimek@users.sf.net>

	* motion.c fix: ignored result 2nd of (0,0) test (rare, not critical).
	* mp1e.1: Corrected -F typo in examples.
	* video/mpeg1.c: Frame skipping flaws. Rewrote.

2001-11-06	<mschimek@users.sf.net>

	* configure.in: Corrected $AS.
	* v4l.c: grab size / capture size / decimating fixed.
	* v4l2.c: 288->240 fallback fixed.

2001-11-01	<mschimek@users.sf.net>

	* mp2.c: Fixed audio table selection (wrong sampling_freq).
	* oss.c: Mixer always set volume of line, not requested source.
	* main.c: Added fallback for unsupported joint stereo.
	* mp1e.1: Corrected a few typos.

2001-10-23	<mschimek@users.sf.net>

	* mp2.c: Improved the codec status stuff, moved the sample
	  parameters code.
	* systems.c: Made buffer allocation in add_input_stream
	  optional to clean up init() in mp2.c.
	* b_mp1e.c: Added format enumeration code, unfinished.

2001-10-21	<mschimek@users.sf.net>

	* video/mpeg1.c: Fixed incorrect type of bit_rate, strdup(0)
	  in option_print, virtual > coded_frame_rate bug.
	* audio/mp2.c: mpeg1_mp2_thread -> class.mainloop. 

2001-10-18	<mschimek@users.sf.net>
	
	* esd.c: Replaced timestamping code by the v4l type, should
	  better handle audio dropping.
	* oss.c: Accept other formats than S16LE.

2001-10-17	<mschimek@users.sf.net>

	* oss.c: Fixed sampling_freq check, reported by Ralf Oehler.