@@ -17,7 +17,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: libvbi.h,v 1.3 2001-08-22 01:28:09 mschimek Exp $ */
+/* $Id: libvbi.h,v 1.4 2001-12-05 07:22:46 mschimek Exp $ */
 
 #ifndef __LIBVBI_H__
 #define __LIBVBI_H__
@@ -29,4 +29,34 @@
 extern void		vbi_init(fifo *f, multiplexer *mux);
 extern void *		vbi_thread(void *f); // XXX
 
+// dependencies...
+
+typedef enum {
+	VBI_RATING_AUTH_NONE = 0,
+	VBI_RATING_AUTH_MPAA,
+	VBI_RATING_AUTH_TV_US,
+	VBI_RATING_AUTH_TV_CA_EN,
+	VBI_RATING_AUTH_TV_CA_FR,
+} vbi_rating_auth;
+
+extern char *		vbi_rating_str_by_id(vbi_rating_auth auth, int id);
+
+typedef enum {
+	VBI_PROG_CLASSF_NONE = 0,
+	VBI_PROG_CLASSF_EIA_608,
+	VBI_PROG_CLASSF_ETS_300231,
+} vbi_prog_classf;
+
+extern char *		vbi_prog_type_str_by_id(vbi_prog_classf classf, int id);
+
 #endif /* libvbi.h */
+
+
+
+
+
+
+
+
+
+
